<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.v7.widget.RecyclerView
    android:id="@+id/rv_fragment_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  </android.support.v7.widget.RecyclerView>
</ScrollView>