<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">


    <TextView
      android:id="@+id/steps_label"
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:layout_gravity="center"
      android:fontFamily="@font/montserrat"
      android:text="@string/steps"
      android:textAlignment="center"
      android:textSize="22sp"/>

    <android.support.v7.widget.RecyclerView
      android:id="@+id/rv_fragment_step_list"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="12dp"
      android:layout_marginLeft="8dp">
    </android.support.v7.widget.RecyclerView>


  </LinearLayout>

