<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <TextView
    android:id="@+id/ingredient_label"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_gravity="center"
    android:padding="8dp"
    android:fontFamily="@font/montserrat"
    android:gravity="center"
    android:text="@string/ingredients"
    android:textAlignment="center"
    android:textColor="@color/secondary_text"
    android:textSize="22sp"/>

  <android.support.v7.widget.RecyclerView
    android:id="@+id/rv_fragment_detail_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/btn_height_mobile"
    android:layout_below="@+id/ingredient_label">
  </android.support.v7.widget.RecyclerView>

  <Button
    android:id="@+id/btn_view_steps"
    android:layout_width="match_parent"
    android:layout_height="@dimen/btn_height_mobile"
    android:layout_alignParentBottom="true"
    android:background="@color/colorPrimary"
    android:text="@string/view_steps"
    >
  </Button>

</RelativeLayout>
